# news-future-ai-gemini

./: .resource_finder_complete  README.md  REPORT.md  fetch_manifold_markets.py  literature_review.md  planning.md  pyproject.toml  resources.md  search_and_download_arxiv.py
.claude/skills/paper-finder/scripts/: find_papers.py
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex  math.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
results/: experiment_outputs.json
src/: app.py  engine.py  experiment_runner.py
